k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bitegenius-web
  namespace: bitegenius
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bitegenius
  template:
    metadata:
      labels:
        app: bitegenius
    spec:
      containers:
        - name: bitegenius
          image: aquils/bitegenius:1.0.0
          ports:
            - containerPort: 8000

          readinessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3

          livenessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 5

          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
